# biodivine-lib-algo-scc

./: .gitignore  .releasenotes.yml  Cargo.toml  bench_all.sh  readme.md
.github/workflows/: build.yml  perf-test.yml  release.yml
biobalm-sd-generator/: .gitignore  README.md  add_delays.py  convert_all.sh  inline_all.sh  inline_constants.py  mk_delayed_networks.sh  print_sd.py
cejn/: Cargo.toml  readme.md
examples/: chain.rs  fwd_bwd.rs
models/bbm-inputs-identity/: 001.aeon  002.aeon  003.aeon  004.aeon  006.aeon  008.aeon  009.aeon  010.aeon  011.aeon  012.aeon  013.aeon  014.aeon  015.aeon  016.aeon  017.aeon  018.aeon  019.aeon  020.aeon  021.aeon  022.aeon  023.aeon  024.aeon  025.aeon  027.aeon  028.aeon  029.aeon  030.aeon  032.aeon  033.aeon  034.aeon  035.aeon  036.aeon  037.aeon  038.aeon  039.aeon  040.aeon  041.aeon  042.aeon  044.aeon  045.aeon  (+169 more)
models/bbm-inputs-true/: 079.aeon  metadata.json
src/: _fwd_bwd.rs  chain.rs  fwd_bwd.rs  hamming.rs  lib.rs  reachability.rs  succession_diagrams.rs  transients.rs  trap_spaces.rs  trimming.rs
