[package]
name = "cejn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
expensive-tests = []

[dependencies]
biodivine-lib-bdd = "0.5.13"
biodivine-lib-param-bn = "0.5.10"
num-bigint = "0.4.4"
log = "0.4.22"
env_logger = "0.11.5"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
test-generator = "0.3.1"

[lib]
name = "cejn"
path = "src/lib.rs"

[[bin]]
name = "chain"
path = "src/bin/chain.rs"

[[bin]]
name = "fwd_bwd"
path = "src/bin/fwd_bwd.rs"
