[package]
name = "biodivine-lib-algo-scc"
version = "0.1.0"
edition = "2024"

[features]
expensive-tests = []

[dependencies]
biodivine-lib-bdd = ">=0.6.2, <1.0.0"
biodivine-lib-param-bn = ">=0.6.2, <1.0.0"
num-bigint = "0.4"

[dev-dependencies]
test-generator = "0.3.1"

[lib]
name = "biodivine_lib_algo_scc"
path = "src/lib.rs"

[[bin]]
name = "chain"
path = "src/bin/chain.rs"

[[bin]]
name = "fwd_bwd"
path = "src/bin/fwd_bwd.rs"
